# random-dish

./: .env.sample  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  Procfile  README.md  heroku.yml  package.json  pyproject.toml  setup.cfg
.github/workflows/: deploy-heroku.yml  node.js.yml  python.yml
backend/: .gitignore  pyproject.toml
backend/src/random_dish/: __init__.py  google_maps_wrapper.py  googlemaps_sample.py  main.py  place_detail.json  test.json
backend/tests/: test_random_dish.py
frontend/: .eslintrc  .eslintrc.json  .gitignore  .prettierrc.json  package.json
frontend/src/: App.js  Footer.js  Header.js  Map.js  PlaceCard.js  RightDrawer.js  index.js
public/: index.html  manifest.json
src/: App.js  Footer.js  Header.js  Map.js  PlaceCard.js  RightDrawer.js  index.js
src/frontend/: APIConnection.js  AlertDialog.js  App.js  CardList.js  Map.js  PlaceCard.js  RightDrawer.js
src/frontend/tests/: CardList.test.js  Header.test.js  PlaceCard.test.js
src/frontend/tests/__snapshots__/: CardList.test.js.snap  Header.test.js.snap  PlaceCard.test.js.snap
src/random_dish/: google_maps_wrapper.py  main.py  place_detail.json  test.json
